CpsDataPersistenceService refactoring
- Extract common code to reduce duplication.
- Move private methods below public methods, and
  move private static methods to bottom of file.
- Note some private methods are left in-place due to
  checkstyle rules (method overloads belong together).

Issue-ID: CPS-2365
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>
Change-Id: I088a5340e315d55aaf427444bdbfdcadf918464a